--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,30 @@
 {
-  "name" : "activecollab/user",
-  "type": "library",
-  "description": "User interface",
-  "license" : "MIT",
-  "prefer-stable": true,
-  "keywords": [ "activecollab" ],
-  "homepage": "https://labs.activecollab.com",
-  "authors": [
-    {
-      "name": "Ilija Studen",
-      "email": "ilija.studen@activecollab.com"
+    "name": "activecollab/user",
+    "type": "library",
+    "description": "User interface",
+    "license": "MIT",
+    "prefer-stable": true,
+    "keywords": [
+        "activecollab"
+    ],
+    "homepage": "https://labs.activecollab.com",
+    "authors": [
+        {
+            "name": "Ilija Studen",
+            "email": "ilija.studen@activecollab.com"
+        }
+    ],
+    "require": {
+        "php": ">=5.6.0",
+        "activecollab/humannameparser": "^1.0.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "ActiveCollab\\User\\": "src",
+            "ActiveCollab\\User\\Test\\": "test/src"
+        }
     }
-  ],
-  "require" : {
-    "php": ">=5.6.0",
-    "jasonpriem/human-name-parser" : "dev-master"
-  },
-  "require-dev" : {
-    "phpunit/phpunit": "~4.8"
-  },
-  "minimum-stability": "dev",
-  "autoload": {
-    "psr-4": {
-      "ActiveCollab\\User\\": "src",
-      "ActiveCollab\\User\\Test\\": "test/src"
-    }
-  }
 }
