--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "activecollab/humannameparser": "^1.0.0"
+        "activecollab/humannameparser": "^1.0",
+        "activecollab/object": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
