--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "activecollab/object": "^1.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^1.0",
         "phpunit/phpunit": "^5.0"
     },
     "autoload": {
